--- a/Coding for juniors official/programs.css
+++ b/Coding for juniors official/programs.css
@@ -3,9 +3,16 @@
 }
 .container {
   background-color: rgb(60, 67, 82);
+  margin-top: 40px;
   margin-bottom: 20px;
   border-radius: 20px;
+}
+
+#programs-h{
+  color: white;
+  font-size: 40px;
 }
 #contact_us_form {
   margin-bottom: 20px;
 }
+
