--- a/Coding for juniors official/about.css
+++ b/Coding for juniors official/about.css
@@ -13,23 +13,100 @@ body {
   flex-direction: row-reverse;
 }
 
-#about_para_box2 {
-  display: flex;
 
+.icon_body{
+  background-color: tomato;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin: auto;
+  display: flex;
   justify-content: center;
-  align-items: center;
 }
+
+
+/* ========================== About Us Features CSS ========================== */
+.feature_section_heading{
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.feature_section1{
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr 3fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
+  align-items: center;
+  margin: 60px 0px;
+  padding: 0px 30px;
+ 
+}
+
+.about_features_heading{
+  margin-top: 20px;
+  text-align: center;
+
+
+}
+.about_features_para{
+text-align: center;
+
+}
+
+.icon1{
+  background-color: teal;
+  
+}
+.icon2{
+  background-color: green;
+
+}
+.icon3{
+  background-color: rgb(202, 61, 131);
+
+}
+.icon4{
+  background-color: rgb(211, 196, 65);
+
+}
+.icon5{
+  background-color: rgb(211, 87, 65);
+
+}
+.icon6{
+  background-color: rgb(65, 211, 155);
+
+}
+
+
+/* ================================== About Us Paras CSS=============================== */
+
+#container_about_us{
+  margin-top: 80px;
+}
+
+.about_blocks{
+  margin: 40px 0px ;
+}
+.featurette-heading{
+  margin-top: -30px;
+}
+/*================================= Contact Form CSS============================= */
 
 #contact_us_form {
   background-color: teal;
 }
 
 #contact_us_form {
-  
+
   color: white;
   display: block;
   margin: auto;
   margin-top: 30px;
+  /* padding: 0px; */
+
 }
 #conact_us_heading {
   text-align: center;
@@ -42,3 +119,72 @@ body {
 
 /* ================================= Footer CSS =================================*/
 
+#footer {
+  color: white;
+  background-color: black;
+  padding: 20px;
+  opacity: 0.8;
+  /* margin-top: 20px; */
+}
+
+/* #footer::before{
+   content: "";
+   position: absolute;
+   background: url(images/front-img2.jpg) ;
+   z-index: -1;
+   height: 20%;
+   width: 100%;
+} */
+
+.footer_grid {
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  /* grid-gap: 3fr; */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 4fr));
+  margin: 15px;
+  /* background-color: violet; */
+}
+
+.footer_headings {
+  text-align: start;
+}
+.footer_text {
+  font-size: 16px;
+  text-align: start;
+  opacity: 0.7;
+}
+.footer_quick_links {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.footer_quick_links a {
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  padding-left: 20px;
+  margin: opx;
+  /* text-align: start; */
+  /* position: relative; */
+}
+.footer_quick_links a:hover {
+  color: blue;
+  /* background-color: tomato; */
+}
+
+.footer_our_programs {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.footer_our_programs a {
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+.footer_our_programs a:hover {
+  color: blue;
+}
